--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
   "name": "pavelzotikov/hashtags",
+  "type": "library",
   "description": "Работа с хэштегами: поиск в тексте, сохранение, получение записей по тегам",
   "keywords": ["hashtags"],
   "license": "MIT",
@@ -14,8 +15,12 @@
     "php": ">=5.3.0",
     "predis/predis": "^1.1"
   },
+  "require-dev": {
+    "phpunit/phpunit" : "4.*"
+  },
+
   "autoload": {
-    "psr-4": { "HashTags\\": "src/" }
+    "psr-4": { "HashTags\\": "src" }
   },
   "minimum-stability": "dev"
 }
