--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,8 @@
 {
   "name": "pavelzotikov/hashtags",
-  "type": "library",
   "description": "Работа с хэштегами: поиск в тексте, сохранение, получение записей по тегам",
   "keywords": ["hashtags"],
   "license": "MIT",
-  "version": "1.0.0",
   "authors": [
     {
       "name": "Pavel Zotikov",
@@ -15,12 +13,7 @@
     "php": ">=5.3.0",
     "predis/predis": "^1.1"
   },
-  "require-dev": {
-    "phpunit/phpunit" : "4.*"
-  },
-
   "autoload": {
-    "psr-4": { "HashTags\\": "src" }
+    "psr-4": { "hashtags\\": "src" }
   },
-  "minimum-stability": "dev"
 }
