fix // not found class

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
     "predis/predis": "^1.1"
   },
   "autoload": {
-    "psr-4": { "hashtags\\": "src/" }
+    "psr-4": { "libhashtags": "src/" }
   }
 }
